--- a/style.css
+++ b/style.css
@@ -48,8 +48,12 @@ h1{
     margin-top: 20px;
     color: white;
 }
+h4{
+    font-size: 23px !important;
+}
 h5{
     margin-top: 10px;
+    font-size: 18px !important;
 }
 h6{
     text-align: center;
@@ -205,12 +209,14 @@ h3{
     font-size: larger;
     font-weight: 650;
 }
-
 h2{
     margin: 20px 10px 10px 10px;
     color: black;
     font-family: 'Heebo', sans-serif;
     text-align: center;
+}
+h2:hover{
+    color: rgb(2, 57, 128);
 }
 .clients{
     font-family: 'Heebo', sans-serif;
