--- a/style.css
+++ b/style.css
@@ -1,455 +1,500 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap");
 /* font-family: 'Heebo', sans-serif; */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none !important; 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none !important;
 }
-.navbar{
-    height: 150px;
-    background-color: rgb(2, 57, 128);
+
+.navbar {
+  height: 150px !important;
+  background-color: rgb(2, 57, 128) !important;
 }
-.img-navbar{
-    height: 160px;
+
+.img-navbar {
+  height: 160px;
 }
-.nav-link{
-    color: white !important;
+
+.nav-link {
+  color: white !important;
 }
-.nav-link:hover{
-    color: black !important;
+
+.nav-link:hover {
+  color: black !important;
 }
-.nav_bar{
-    font-size: 30px;
-    margin: 30px;
-    color: white;
+
+.nav_bar {
+  font-size: 30px;
+  margin: 30px;
+  color: white;
 }
-.nav_bar:hover{
-    cursor: pointer;
+
+.nav_bar:hover {
+  cursor: pointer;
 }
-nav a{
-    font-family: 'Heebo', sans-serif;
-    padding-right: 10px;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    justify-content: space-between;
-    font-size: 18px;
+
+nav a {
+  font-family: "Heebo", sans-serif;
+  padding-right: 10px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  justify-content: space-between;
+  font-size: 18px;
 }
-nav a:hover{
-    color: rgb(0, 0, 0);
+
+nav a:hover {
+  color: rgb(0, 0, 0);
 }
-body{
-    margin: 0;
-    background-color: rgb(141, 141, 141);
-    font-family: 'Heebo', sans-serif;
+
+body {
+  margin: 0;
+  background-color: rgb(141, 141, 141);
+  font-family: "Heebo", sans-serif;
 }
-h1{
-    text-align: center;
-    margin-top: 20px;
-    color: white;
-    font-size: 30px !important;
+
+h1 {
+  text-align: center;
+  margin-top: 20px;
+  color: white;
+  font-size: 30px !important;
 }
-h4{
-    font-size: 23px !important;
+
+h4 {
+  font-size: 23px !important;
 }
-h4{
-    font-size: 23px !important;
+
+h4 {
+  font-size: 23px !important;
 }
-h5{
-    font-size: 18px !important;
-    margin-top: 12px;
+
+h5 {
+  font-size: 18px !important;
+  margin-top: 12px;
 }
-h6{
-    font-size: 20px !important;
-    text-align: center;
-    margin-bottom: 5px;
-    margin-top: 5px;
-    color: black;
+
+h6 {
+  font-size: 20px !important;
+  text-align: center;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  color: black;
 }
-footer{
-    width: 100%;
-    height: 100%;
+
+footer {
+  width: 100%;
+  height: 100%;
 }
-.container__footer{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: auto;
-    margin: auto;
-    height: 170px;
-    background-color: rgb(2, 57, 128);
-    color: rgb(255, 255, 255);
-    font-family: 'Heebo', sans-serif;
+
+.container__footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: auto;
+  margin: auto;
+  height: 170px;
+  background-color: rgb(2, 57, 128);
+  color: rgb(255, 255, 255);
+  font-family: "Heebo", sans-serif;
 }
-.logo1 img{
-    height: 160px;
-    margin-bottom: 10px;
+
+.logo1 img {
+  height: 160px;
+  margin-bottom: 10px;
 }
-footer i{
-    font-size: 20px;
-    margin-left: 33px;
+
+footer i {
+  font-size: 20px;
+  margin-left: 33px;
 }
-.vw_truck{
-    background-image: url(multimedia/planta4.png);
-    background-size: cover;
-    overflow: hidden;
-    height: 700px;
+
+.vw_truck {
+  background-image: url(multimedia/planta4.png);
+  background-size: cover;
+  overflow: hidden;
+  height: 700px;
 }
-.us{
-    background-color: rgba(0, 0, 0, 0.774);
-    color: white;
-    font-size: 25px;
-    margin: 20px 10px 10px 10px;
-    padding: 10px
+
+.us {
+  background-color: rgba(0, 0, 0, 0.774);
+  color: white;
+  font-size: 25px;
+  margin: 20px 10px 10px 10px;
+  padding: 10px;
 }
-section{
-    display: flex;
-    justify-content: space-evenly;
-    height: 650px;
+
+section {
+  display: flex;
+  justify-content: space-evenly;
+  height: 650px;
 }
-.card{
-    margin-top: 50px;
-    margin-bottom: 50px;
-    height: 550px;
-    width: 300px;
-    background-color: rgb(83, 82, 82);
-    text-align: center;
-    border: 1px solid black;
+
+.card {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  height: 550px;
+  width: 300px;
+  background-color: rgb(83, 82, 82);
+  text-align: center;
+  border: 1px solid black;
 }
-.card_img{
-    height: 300px;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
+
+.card_img {
+  height: 300px;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
 }
-.card_img1{
-    background-image: url(multimedia/descarga6.jpg);
+
+.card_img1 {
+  background-image: url(multimedia/descarga6.jpg);
 }
-.card_img2{
-    background-image: url(multimedia/camion4.jpg);
+
+.card_img2 {
+  background-image: url(multimedia/camion4.jpg);
 }
-.card_img3{
-    background-image: url(multimedia/laboratorio.jpg);
+
+.card_img3 {
+  background-image: url(multimedia/laboratorio.jpg);
 }
-.card_img4{
-    background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
+
+.card_img4 {
+  background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
 }
-.card_title{
-    font-size: 19px;
-    padding: 10px;
-    color: white;
-    background-color: #333;
+
+.card_title {
+  font-size: 19px;
+  padding: 10px;
+  color: white;
+  background-color: #333;
 }
-.card_desc{
-    color: white;
-    margin-top: 5px;
+
+.card_desc {
+  color: white;
+  margin-top: 5px;
 }
-.card a{
-    color: white;
-    background-color: rgb(2, 57, 128);
-    text-decoration: none;
-    padding: 10px 20px;
-    width: 110px;
-    margin-left: 93px;
-    border-radius: 10px;
+
+.card a {
+  color: white;
+  background-color: rgb(2, 57, 128);
+  text-decoration: none;
+  padding: 10px 20px;
+  width: 110px;
+  margin-left: 93px;
+  border-radius: 10px;
 }
-.home{
-    font-family: 'Heebo', sans-serif;
-    display: grid;
-    width: 100%;
-    height: 1000px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+
+.home {
+  font-family: "Heebo", sans-serif;
+  display: grid;
+  width: 100%;
+  height: 1000px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(1, 1fr);
 }
-.foto{
-    border: 1px solid #000;
-    background-position: center;
-    background-size: cover;
-    text-align: center;
-    font-size: 20px;
+
+.foto {
+  border: 1px solid #000;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  font-size: 20px;
 }
-.img1{
-    background-image: url(multimedia/planta.jpg);
+
+.img1 {
+  background-image: url(multimedia/planta.jpg);
 }
-.img2{
-    background-image: url(multimedia/descarga2.jpg);
+
+.img2 {
+  background-image: url(multimedia/descarga2.jpg);
 }
-.img3{
-    background-image: url(multimedia/movimiento\ de\ suelo.jpg);
+
+.img3 {
+  background-image: url(multimedia/movimiento\ de\ suelo.jpg);
 }
-.img4{
-    background-image: url(multimedia/planta4.png)
+
+.img4 {
+  background-image: url(multimedia/planta4.png);
 }
-.servicios{
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(2, 2fr);
-    grid-template-rows: repeat(2, 400px);
-    padding: 15px;
-    grid-gap: 115px;
-    margin-top: 30px;
-    margin-bottom: 130px;
+
+.servicios {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(2, 2fr);
+  grid-template-rows: repeat(2, 400px);
+  padding: 15px;
+  grid-gap: 115px;
+  margin-top: 30px;
+  margin-bottom: 130px;
 }
-.fot{
-    border: 1px solid #000;
-    background-position: center;
-    background-size: cover;
+
+.fot {
+  border: 1px solid #000;
+  background-position: center;
+  background-size: cover;
 }
-.fot1{
-    background-image: url(multimedia/descarga6.jpg);
+
+.fot1 {
+  background-image: url(multimedia/descarga6.jpg);
 }
-.fot2{
-    background-image: url(multimedia/camion\ 3.jpg);
+
+.fot2 {
+  background-image: url(multimedia/camion\ 3.jpg);
 }
-.fot3{
-    background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
+
+.fot3 {
+  background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
 }
-.fot4{
-    background-image: url(multimedia/laboratorio.jpg);
+
+.fot4 {
+  background-image: url(multimedia/laboratorio.jpg);
 }
-h3{
-    color: white;
-    text-align: center;
-    font-size: larger;
-    font-weight: 650;
+
+h3 {
+  color: white;
+  text-align: center;
+  font-size: larger;
+  font-weight: 650;
 }
-h2{
-    margin: 20px 10px 10px 10px;
-    color: black;
-    text-align: center;
+
+h2 {
+  margin: 20px 10px 10px 10px;
+  color: black;
+  text-align: center;
 }
-h2:hover{
-    color: rgb(2, 57, 128);
+
+h2:hover {
+  color: rgb(2, 57, 128);
 }
-.clients{
-    font-family: 'Heebo', sans-serif;
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(3, 3fr);
-    grid-template-rows: repeat(2, 300px);
-    grid-gap: 15px;
-    padding: 15px;
+
+.clients {
+  font-family: "Heebo", sans-serif;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 3fr);
+  grid-template-rows: repeat(2, 300px);
+  grid-gap: 15px;
+  padding: 15px;
 }
-.item{
-    border: 1px solid #000;
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
-    transition: all 0.3s;
+
+.item {
+  border: 1px solid #000;
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  transition: all 0.3s;
 }
-.item:hover{
-    transform: scale(1.02);
+
+.item:hover {
+  transform: scale(1.02);
 }
-.item1{
-    background-image: url(multimedia/C1.png);
+
+.item1 {
+  background-image: url(multimedia/C1.png);
 }
-.item2{
-    background-image: url(multimedia/C2.png);
+
+.item2 {
+  background-image: url(multimedia/C2.png);
 }
-.item3{
-    background-image: url(multimedia/C3.png);
+
+.item3 {
+  background-image: url(multimedia/C3.png);
 }
-.item4{
-    background-image: url(multimedia/C4.png);
+
+.item4 {
+  background-image: url(multimedia/C4.png);
 }
-.item5{
-    background-image: url(multimedia/C5.png);
+
+.item5 {
+  background-image: url(multimedia/C5.png);
 }
-.item6{
-    background-image: url(multimedia/C6.png);
+
+.item6 {
+  background-image: url(multimedia/C6.png);
 }
-form{
-    margin: 50px;
-    margin-top: 20px;
-    height: 185px;
-    width: 1260px;
-    border-style: solid;
-    text-align: center;
-    font-weight: 600 !important;
+
+form {
+  margin: 50px;
+  margin-top: 20px;
+  height: 185px;
+  width: 1260px;
+  border-style: solid;
+  text-align: center;
+  font-weight: 600 !important;
 }
-.mapa{
-    margin: 20px;
-    margin-left: 25px;
-    text-align: center;
+
+.mapa {
+  margin: 20px;
+  margin-left: 25px;
+  text-align: center;
 }
-.navegacion{
-    margin: 10px;
+
+.navegacion {
+  margin: 10px;
 }
-.contacto{
-    font-family: 'Heebo', sans-serif !important;
-    margin: 10px;
+
+.contacto {
+  font-family: "Heebo", sans-serif !important;
+  margin: 10px;
 }
-.redes_sociales{
-    margin: 10px;
+
+.redes_sociales {
+  margin: 10px;
 }
-form{
-    border: solid 2px black;
-    height: 340px;
-    text-align: left;
-    padding: 10px;
+
+form {
+  border: solid 2px black;
+  height: 340px;
+  text-align: left;
+  padding: 10px;
 }
-.mb-3{
-    font-size: 20px;
+
+.mb-3 {
+  font-size: 20px;
 }
-button{
-    margin-left: 580px;
+
+button {
+  margin-left: 580px;
 }
 
 /*comienzan las media quare*/
-
-
-@media only screen and (max-width: 905px) and (min-width: 689px){
-    .home{
-        grid-template-columns: repeat(2, 2fr);
-        grid-template-rows: repeat(2, 500px);
-    }
-    h1{
-        font-size: 30px;
-    }
-    h2{
-        color: white;
-        background-color: rgba(0, 0, 0, 0.774);
-    }
-    .img3{
-        background-position: bottom;
-    }
-    footer{
-        height: 100%;
-        width: 100%;
-    }
-    .contacto{
-        content-visibility: hidden;
-    }
-    .navegacion{
-        margin-left: 80px;
-    }
-    .redes_sociales{
-        margin-right: 10px;
-    }
+@media only screen and (max-width: 905px) and (min-width: 689px) {
+  .home {
+    grid-template-columns: repeat(2, 2fr);
+    grid-template-rows: repeat(2, 500px);
+  }
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.774);
+  }
+  .img3 {
+    background-position: bottom;
+  }
+  footer {
+    height: 100%;
+    width: 100%;
+  }
+  .contacto {
+    content-visibility: hidden;
+  }
+  .navegacion {
+    margin-left: 80px;
+  }
+  .redes_sociales {
+    margin-right: 10px;
+  }
 }
-
-@media only screen and (max-width: 900px){
-    .clients{
-        grid-template-columns: repeat(2, 2fr);
-        grid-template-rows: repeat(3, 400px);
-    }
+@media only screen and (max-width: 900px) {
+  .clients {
+    grid-template-columns: repeat(2, 2fr);
+    grid-template-rows: repeat(3, 400px);
+  }
 }
-
-@media only screen and (max-width: 730px){
-    .clients{
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(6, 450px);
-    }
+@media only screen and (max-width: 730px) {
+  .clients {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 450px);
+  }
 }
-
-@media only screen and (max-width: 688px){
-    .home{
-        grid-template-columns: repeat(2, 2fr);
-        grid-template-rows: repeat(2, 500px);
-    }
-    .contacto{
-        content-visibility: hidden;
-    }
-    .navegacion{
-        margin-left: 80px;
-    }
-    h2{
-        background-color: rgba(0, 0, 0, 0.774);
-        color: white;
-    }
+@media only screen and (max-width: 688px) {
+  .home {
+    grid-template-columns: repeat(2, 2fr);
+    grid-template-rows: repeat(2, 500px);
+  }
+  .contacto {
+    content-visibility: hidden;
+  }
+  .navegacion {
+    margin-left: 80px;
+  }
+  h2 {
+    background-color: rgba(0, 0, 0, 0.774);
+    color: white;
+  }
 }
-
-@media only screen and (max-width: 605px) and (min-width: 320px){
-    .home{
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(1, 200px);
-    }
-    .img3{
-        background-image: url(multimedia/obra.jpg);
-    }
+@media only screen and (max-width: 605px) and (min-width: 320px) {
+  .home {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 200px);
+  }
+  .img3 {
+    background-image: url(multimedia/obra.jpg);
+  }
 }
-
-@media only screen and (max-width: 575px) and (min-width: 320px){
-    .navbar-collapse{
-        background-color: rgb(2, 57, 128);
-    }
+@media only screen and (max-width: 575px) and (min-width: 320px) {
+  .navbar-collapse {
+    background-color: rgb(2, 57, 128);
+  }
 }
-
-@media only screen and (max-width: 566px){
-    h4{
-        font-size: 21px !important;
-    }
+@media only screen and (max-width: 566px) {
+  h4 {
+    font-size: 21px !important;
+  }
 }
-
-@media only screen and (max-width: 548px) and (min-width: 496px){
-    .navegacion{
-        content-visibility: hidden;
-    }
-    .redes_sociales{
-        margin-top: 45px;
-        margin-right: 30px;
-    }
+@media only screen and (max-width: 548px) and (min-width: 496px) {
+  .navegacion {
+    content-visibility: hidden;
+  }
+  .redes_sociales {
+    margin-top: 45px;
+    margin-right: 30px;
+  }
 }
-
-@media only screen and (max-width: 496px){
-    .navegacion{
-        content-visibility: hidden;
-    }
-    .redes_sociales{
-        margin-top: 45px;
-        margin-right: 20px;
-    }
-    h2{
-        font-size: 20px;
-        background-color: rgba(0, 0, 0, 0.774);
-    }
+@media only screen and (max-width: 496px) {
+  .navegacion {
+    content-visibility: hidden;
+  }
+  .redes_sociales {
+    margin-top: 45px;
+    margin-right: 20px;
+  }
+  h2 {
+    font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.774);
+  }
 }
-
-@media only screen and (max-width: 460px){
-    .clients{
-        grid-template-rows: repeat(6, 300px);
-    }
+@media only screen and (max-width: 460px) {
+  .clients {
+    grid-template-rows: repeat(6, 300px);
+  }
 }
-
-@media only screen and (max-width: 451px){
-    .logo1{
-        content-visibility: hidden;
-    }
-    .redes_sociales{
-        margin: 45px 130px 40px 5px;
-    }
+@media only screen and (max-width: 451px) {
+  .logo1 {
+    content-visibility: hidden;
+  }
+  .redes_sociales {
+    margin: 45px 130px 40px 5px;
+  }
 }
-
-@media only screen and (max-width: 406px){
-    .redes_sociales{
-        margin: 45px 130px 40px 5px;
-    }
+@media only screen and (max-width: 406px) {
+  .redes_sociales {
+    margin: 45px 130px 40px 5px;
+  }
 }
-
-@media only screen and (max-width: 396px){
-    .redes_sociales{
-        margin-right: 120px;
-        margin-top: 40px;
-    }
+@media only screen and (max-width: 396px) {
+  .redes_sociales {
+    margin-right: 120px;
+    margin-top: 40px;
+  }
 }
-
-@media only screen and (max-width: 386px){
-    .redes_sociales{
-        margin-right: 110px;
-        margin-top: 40px;
-    }
+@media only screen and (max-width: 386px) {
+  .redes_sociales {
+    margin-right: 110px;
+    margin-top: 40px;
+  }
 }
-
-@media only screen and (max-width: 376px){
-    .redes_sociales{
-        margin-left: 120px;
-        margin-right: 50px;
-        margin-top: 10px;
-    }
+@media only screen and (max-width: 376px) {
+  .redes_sociales {
+    margin-left: 120px;
+    margin-right: 50px;
+    margin-top: 10px;
+  }
 }
-
-@media only screen and (max-width: 355px) and (min-width: 320px){
-    .redes_sociales{
-        margin-left: 95px;
-    }
-}
+@media only screen and (max-width: 355px) and (min-width: 320px) {
+  .redes_sociales {
+    margin-left: 95px;
+  }
+}/*# sourceMappingURL=style.css.map */
