--- a/style.css
+++ b/style.css
@@ -64,10 +64,6 @@ h4 {
   font-size: 23px !important;
 }
 
-h4 {
-  font-size: 23px !important;
-}
-
 h5 {
   font-size: 18px !important;
   margin-top: 12px;
@@ -75,6 +71,7 @@ h5 {
 
 h6 {
   font-size: 20px !important;
+  font-weight: 700;
   text-align: center;
   margin-bottom: 5px;
   margin-top: 5px;
@@ -324,9 +321,12 @@ form {
 }
 
 .mapa {
-  margin: 20px;
-  margin-left: 25px;
+  margin: 20px 20px 40px 20px;
   text-align: center;
+}
+
+iframe {
+  width: 1000px;
 }
 
 .navegacion {
@@ -345,6 +345,7 @@ form {
 form {
   border: solid 2px black;
   height: 340px;
+  width: auto;
   text-align: left;
   padding: 10px;
 }
@@ -353,8 +354,8 @@ form {
   font-size: 20px;
 }
 
-button {
-  margin-left: 580px;
+.boton {
+  text-align: center;
 }
 
 /*comienzan las media quare*/
@@ -396,6 +397,11 @@ button {
   }
   .card a {
     margin-left: 400px;
+  }
+}
+@media only screen and (max-width: 1080px) {
+  iframe {
+    width: 700px;
   }
 }
 @media only screen and (max-width: 920px) {
@@ -450,6 +456,11 @@ button {
     background-position: center;
   }
 }
+@media only screen and (max-width: 800px) {
+  iframe {
+    width: 550px;
+  }
+}
 @media only screen and (max-width: 730px) {
   .clients {
     grid-template-columns: repeat(1, 1fr);
@@ -484,6 +495,11 @@ button {
     color: white;
   }
 }
+@media only screen and (max-width: 666px) {
+  iframe {
+    width: 450px;
+  }
+}
 @media only screen and (max-width: 605px) and (min-width: 320px) {
   .home {
     grid-template-columns: repeat(1, 1fr);
@@ -501,6 +517,18 @@ button {
 @media only screen and (max-width: 566px) {
   h4 {
     font-size: 21px !important;
+  }
+}
+@media only screen and (max-width: 560px) {
+  .mapa {
+    content-visibility: hidden;
+  }
+  h6 {
+    content-visibility: hidden;
+  }
+  form {
+    margin: 10px;
+    margin-top: 50px;
   }
 }
 @media only screen and (max-width: 548px) and (min-width: 496px) {
