--- a/style.scss
+++ b/style.scss
@@ -52,15 +52,13 @@ h1{
 h4{
     font-size: 23px !important;
 }
-h4{
-    font-size: 23px !important;
-}
 h5{
     font-size: 18px !important;
     margin-top: 12px;
 }
 h6{
     font-size: 20px !important;
+    font-weight: 700;
     text-align: center;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -268,9 +266,11 @@ form{
     font-weight: 600 !important;
 }
 .mapa{
-    margin: 20px;
-    margin-left: 25px;
+    margin: 20px 20px 40px 20px;
     text-align: center;
+}
+iframe{
+    width: 1000px;
 }
 .navegacion{
     margin: 10px;
@@ -285,17 +285,19 @@ form{
 form{
     border: solid 2px black;
     height: 340px;
+    width: auto;
     text-align: left;
     padding: 10px;
 }
 .mb-3{
     font-size: 20px;
 }
-button{
-    margin-left: 580px;
+.boton{
+    text-align: center;
 }
 
 /*comienzan las media quare*/
+
 @media only screen and (max-width: 1215px){
     section{
         display: grid;
@@ -335,6 +337,12 @@ button{
     }
     .card a{
         margin-left: 400px;
+    }
+}
+
+@media only screen and (max-width: 1080px){
+    iframe{
+        width: 700px;
     }
 }
 
@@ -394,6 +402,16 @@ button{
     }
 }
 
+@media only screen and (max-width: 800px){
+    iframe{
+        width: 550px;
+    }
+}
+
+@media only screen and (max-width: 780px){
+    
+}
+
 @media only screen and (max-width: 730px){
     .clients{
         grid-template-columns: repeat(1, 1fr);
@@ -431,6 +449,12 @@ button{
     }
 }
 
+@media only screen and (max-width: 666px){
+    iframe{
+        width: 450px;
+    }
+}
+
 @media only screen and (max-width: 605px) and (min-width: 320px){
     .home{
         grid-template-columns: repeat(1, 1fr);
@@ -450,6 +474,19 @@ button{
 @media only screen and (max-width: 566px){
     h4{
         font-size: 21px !important;
+    }
+}
+
+@media only screen and (max-width: 560px){
+    .mapa{
+        content-visibility: hidden;
+    }
+    h6{
+        content-visibility: hidden;
+    }
+    form{
+        margin: 10px;
+        margin-top: 50px;
     }
 }
 
