--- a/style.scss
+++ b/style.scss
@@ -638,3 +638,10 @@ form{
         height: 940px;
     }
 }
+
+@media only screen and (max-width: 320px){
+    form{
+        height: 350px;
+        padding: 10px;
+    }
+}
