--- a/style.css
+++ b/style.css
@@ -665,7 +665,11 @@ form {
 }
 @media only screen and (max-width: 320px) {
   form {
-    height: 350px;
+    height: 400px;
     padding: 10px;
+    padding-top: 30px;
+  }
+  .boton {
+    margin-top: 50px;
   }
 }/*# sourceMappingURL=style.css.map */
