--- a/style.scss
+++ b/style.scss
@@ -87,24 +87,6 @@ footer i{
     font-size: 20px;
     margin-left: 33px;
 }
-.vw_truck{
-    background-image: url(multimedia/planta4.png);
-    background-size: cover;
-    overflow: hidden;
-    height: 700px;
-}
-.us{
-    background-color: rgba(0, 0, 0, 0.774);
-    color: white;
-    font-size: 25px;
-    margin: 20px 10px 10px 10px;
-    padding: 10px
-}
-section{
-    display: flex;
-    justify-content: space-evenly;
-    height: 650px;
-}
 .card{
     margin-top: 50px;
     margin-bottom: 50px;
@@ -649,3 +631,4 @@ form{
         margin-top: 50px;
     }
 }
+@import "_nosotros"
