--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap");
-/* font-family: 'Heebo', sans-serif */
+/* font-family: 'Heebo', sans-serif; */
 * {
   margin: 0;
   padding: 0;
@@ -7,34 +7,28 @@
   text-decoration: none !important;
 }
 
-.navbar {
+header .navbar {
   height: 150px !important;
   background-color: rgb(2, 57, 128) !important;
 }
-
-.img-navbar {
+header .img-navbar {
   height: 160px;
 }
-
-.nav-link {
+header .nav-link {
   color: white !important;
 }
-
-.nav-link:hover {
+header .nav-link:hover {
   color: black !important;
 }
-
-.nav_bar {
+header .nav_bar {
   font-size: 30px;
   margin: 30px;
   color: white;
 }
-
-.nav_bar:hover {
+header .nav_bar:hover {
   cursor: pointer;
 }
-
-nav a {
+header nav a {
   font-family: "Heebo", sans-serif;
   padding-right: 10px;
   color: rgb(255, 255, 255);
@@ -42,8 +36,7 @@ nav a {
   justify-content: space-between;
   font-size: 18px;
 }
-
-nav a:hover {
+header nav a:hover {
   color: rgb(0, 0, 0);
 }
 
@@ -82,8 +75,7 @@ footer {
   width: 100%;
   height: 100%;
 }
-
-.container__footer {
+footer .container__footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -94,8 +86,17 @@ footer {
   color: rgb(255, 255, 255);
   font-family: "Heebo", sans-serif;
 }
-
-.logo1 img {
+footer .container__footer .navegacion {
+  margin: 10px;
+}
+footer .container__footer .contacto {
+  font-family: "Heebo", sans-serif !important;
+  margin: 10px;
+}
+footer .container__footer .redes_sociales {
+  margin: 10px;
+}
+footer .logo1 img {
   height: 160px;
   margin-bottom: 10px;
 }
@@ -103,6 +104,15 @@ footer {
 footer i {
   font-size: 20px;
   margin-left: 33px;
+}
+
+footer a {
+  color: white;
+  font-size: 19px;
+}
+
+footer a:hover {
+  color: black;
 }
 
 .card {
@@ -114,40 +124,33 @@ footer i {
   text-align: center;
   border: 1px solid black;
 }
-
-.card_img {
+.card .card_img {
   height: 300px;
   width: 100%;
   background-size: cover;
   background-position: center;
 }
-
-.card_img1 {
-  background-image: url(multimedia/descarga6.jpg);
-}
-
-.card_img2 {
-  background-image: url(multimedia/camion4.jpg);
-}
-
-.card_img3 {
-  background-image: url(multimedia/laboratorio.jpg);
-}
-
-.card_img4 {
-  background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
-}
-
-.card_title {
+.card .card_title {
   font-size: 19px;
   padding: 10px;
   color: white;
   background-color: #333;
 }
-
-.card_desc {
+.card .card_desc {
   color: white;
   margin-top: 5px;
+}
+.card .card_img1 {
+  background-image: url(multimedia/descarga6.jpg);
+}
+.card .card_img2 {
+  background-image: url(multimedia/camion4.jpg);
+}
+.card .card_img3 {
+  background-image: url(multimedia/laboratorio.jpg);
+}
+.card .card_img4 {
+  background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
 }
 
 .card a {
@@ -168,62 +171,24 @@ footer i {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(1, 1fr);
 }
-
-.foto {
+.home .foto {
   border: 1px solid #000;
   background-position: center;
   background-size: cover;
   text-align: center;
   font-size: 20px;
 }
-
-.img1 {
+.home .img1 {
   background-image: url(multimedia/planta.jpg);
 }
-
-.img2 {
+.home .img2 {
   background-image: url(multimedia/descarga2.jpg);
 }
-
-.img3 {
+.home .img3 {
   background-image: url(multimedia/movimiento\ de\ suelo.jpg);
 }
-
-.img4 {
+.home .img4 {
   background-image: url(multimedia/planta4.png);
-}
-
-.servicios {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(2, 2fr);
-  grid-template-rows: repeat(2, 400px);
-  padding: 15px;
-  grid-gap: 115px;
-  margin-top: 30px;
-  margin-bottom: 130px;
-}
-
-.fot {
-  border: 1px solid #000;
-  background-position: center;
-  background-size: cover;
-}
-
-.fot1 {
-  background-image: url(multimedia/descarga6.jpg);
-}
-
-.fot2 {
-  background-image: url(multimedia/camion\ 3.jpg);
-}
-
-.fot3 {
-  background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
-}
-
-.fot4 {
-  background-image: url(multimedia/laboratorio.jpg);
 }
 
 h3 {
@@ -252,51 +217,45 @@ h2:hover {
   grid-gap: 15px;
   padding: 15px;
 }
-
-.item {
+.clients .item {
   border: 1px solid #000;
   background-position: center;
   background-size: cover;
   border-radius: 10px;
   transition: all 0.3s;
 }
+.clients .item1 {
+  background-image: url(multimedia/C1.png);
+}
+.clients .item2 {
+  background-image: url(multimedia/C2.png);
+}
+.clients .item3 {
+  background-image: url(multimedia/C3.png);
+}
+.clients .item4 {
+  background-image: url(multimedia/C4.png);
+}
+.clients .item5 {
+  background-image: url(multimedia/C5.png);
+}
+.clients .item6 {
+  background-image: url(multimedia/C6.png);
+}
 
 .item:hover {
   transform: scale(1.02);
 }
 
-.item1 {
-  background-image: url(multimedia/C1.png);
-}
-
-.item2 {
-  background-image: url(multimedia/C2.png);
-}
-
-.item3 {
-  background-image: url(multimedia/C3.png);
-}
-
-.item4 {
-  background-image: url(multimedia/C4.png);
-}
-
-.item5 {
-  background-image: url(multimedia/C5.png);
-}
-
-.item6 {
-  background-image: url(multimedia/C6.png);
-}
-
 form {
   margin: 50px;
   margin-top: 20px;
-  height: 185px;
-  width: 1260px;
-  border-style: solid;
-  text-align: center;
   font-weight: 600 !important;
+  border: solid 2px black;
+  height: 340px;
+  width: auto;
+  text-align: left;
+  padding: 10px;
 }
 
 .mapa {
@@ -306,27 +265,6 @@ form {
 
 iframe {
   width: 1000px;
-}
-
-.navegacion {
-  margin: 10px;
-}
-
-.contacto {
-  font-family: "Heebo", sans-serif !important;
-  margin: 10px;
-}
-
-.redes_sociales {
-  margin: 10px;
-}
-
-form {
-  border: solid 2px black;
-  height: 340px;
-  width: auto;
-  text-align: left;
-  padding: 10px;
 }
 
 .mb-3 {
