--- a/style.css
+++ b/style.css
@@ -7,28 +7,34 @@
   text-decoration: none !important;
 }
 
-header .navbar {
+.navbar {
   height: 150px !important;
   background-color: rgb(2, 57, 128) !important;
 }
-header .navbar .img-navbar {
+
+.img-navbar {
   height: 160px;
 }
-header .nav-link {
+
+.nav-link {
   color: white !important;
 }
-header .nav-link:hover {
+
+.nav-link:hover {
   color: black !important;
 }
-header .nav_bar {
+
+.nav_bar {
   font-size: 30px;
   margin: 30px;
   color: white;
 }
-header .nav_bar:hover {
+
+.nav_bar:hover {
   cursor: pointer;
 }
-header nav a {
+
+nav a {
   font-family: "Heebo", sans-serif;
   padding-right: 10px;
   color: rgb(255, 255, 255);
@@ -36,7 +42,8 @@ header nav a {
   justify-content: space-between;
   font-size: 18px;
 }
-header nav a:hover {
+
+nav a:hover {
   color: rgb(0, 0, 0);
 }
 
@@ -75,7 +82,8 @@ footer {
   width: 100%;
   height: 100%;
 }
-footer .container__footer {
+
+.container__footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -86,17 +94,8 @@ footer .container__footer {
   color: rgb(255, 255, 255);
   font-family: "Heebo", sans-serif;
 }
-footer .container__footer .navegacion {
-  margin: 10px;
-}
-footer .container__footer .contacto {
-  font-family: "Heebo", sans-serif !important;
-  margin: 10px;
-}
-footer .container__footer .redes_sociales {
-  margin: 10px;
-}
-footer .logo1 img {
+
+.logo1 img {
   height: 160px;
   margin-bottom: 10px;
 }
@@ -104,15 +103,6 @@ footer .logo1 img {
 footer i {
   font-size: 20px;
   margin-left: 33px;
-}
-
-footer a {
-  color: white;
-  font-size: 19px;
-}
-
-footer a:hover {
-  color: black;
 }
 
 .card {
@@ -132,18 +122,6 @@ footer a:hover {
   background-position: center;
 }
 
-.card_title {
-  font-size: 19px;
-  padding: 10px;
-  color: white;
-  background-color: #333;
-}
-
-.card_desc {
-  color: white;
-  margin-top: 5px;
-}
-
 .card_img1 {
   background-image: url(multimedia/descarga6.jpg);
 }
@@ -160,6 +138,28 @@ footer a:hover {
   background-image: url(multimedia/movimiento\ de\ suelo\ 2.jpg);
 }
 
+.card_title {
+  font-size: 19px;
+  padding: 10px;
+  color: white;
+  background-color: #333;
+}
+
+.card_desc {
+  color: white;
+  margin-top: 5px;
+}
+
+.card a {
+  color: white;
+  background-color: rgb(2, 57, 128);
+  text-decoration: none;
+  padding: 10px 20px;
+  width: 110px;
+  margin-left: 93px;
+  border-radius: 10px;
+}
+
 .home {
   font-family: "Heebo", sans-serif;
   display: grid;
@@ -168,23 +168,28 @@ footer a:hover {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(1, 1fr);
 }
-.home .foto {
+
+.foto {
   border: 1px solid #000;
   background-position: center;
   background-size: cover;
   text-align: center;
   font-size: 20px;
 }
-.home .img1 {
+
+.img1 {
   background-image: url(multimedia/planta.jpg);
 }
-.home .img2 {
+
+.img2 {
   background-image: url(multimedia/descarga2.jpg);
 }
-.home .img3 {
+
+.img3 {
   background-image: url(multimedia/movimiento\ de\ suelo.jpg);
 }
-.home .img4 {
+
+.img4 {
   background-image: url(multimedia/planta4.png);
 }
 
@@ -247,45 +252,51 @@ h2:hover {
   grid-gap: 15px;
   padding: 15px;
 }
-.clients .item {
+
+.item {
   border: 1px solid #000;
   background-position: center;
   background-size: cover;
   border-radius: 10px;
   transition: all 0.3s;
 }
-.clients .item1 {
-  background-image: url(multimedia/C1.png);
-}
-.clients .item2 {
-  background-image: url(multimedia/C2.png);
-}
-.clients .item3 {
-  background-image: url(multimedia/C3.png);
-}
-.clients .item4 {
-  background-image: url(multimedia/C4.png);
-}
-.clients .item5 {
-  background-image: url(multimedia/C5.png);
-}
-.clients .item6 {
-  background-image: url(multimedia/C6.png);
-}
 
 .item:hover {
   transform: scale(1.02);
 }
 
+.item1 {
+  background-image: url(multimedia/C1.png);
+}
+
+.item2 {
+  background-image: url(multimedia/C2.png);
+}
+
+.item3 {
+  background-image: url(multimedia/C3.png);
+}
+
+.item4 {
+  background-image: url(multimedia/C4.png);
+}
+
+.item5 {
+  background-image: url(multimedia/C5.png);
+}
+
+.item6 {
+  background-image: url(multimedia/C6.png);
+}
+
 form {
   margin: 50px;
   margin-top: 20px;
+  height: 185px;
+  width: 1260px;
+  border-style: solid;
+  text-align: center;
   font-weight: 600 !important;
-  border: solid 2px black;
-  height: 340px;
-  width: auto;
-  text-align: left;
-  padding: 10px;
 }
 
 .mapa {
@@ -295,6 +306,27 @@ form {
 
 iframe {
   width: 1000px;
+}
+
+.navegacion {
+  margin: 10px;
+}
+
+.contacto {
+  font-family: "Heebo", sans-serif !important;
+  margin: 10px;
+}
+
+.redes_sociales {
+  margin: 10px;
+}
+
+form {
+  border: solid 2px black;
+  height: 340px;
+  width: auto;
+  text-align: left;
+  padding: 10px;
 }
 
 .mb-3 {
@@ -546,7 +578,8 @@ iframe {
 }
 @media only screen and (max-width: 409px) {
   .vw_truck {
-    height: 750px;
+    height: 780px;
+    margin-bottom: 15px;
   }
 }
 @media only screen and (max-width: 406px) {
@@ -619,6 +652,9 @@ iframe {
   .boton {
     margin-top: 50px;
   }
+  .us {
+    margin-bottom: 20px;
+  }
 }
 /*variables inicio*/
 /*variables final*/
@@ -641,6 +677,4 @@ section {
   font-size: 25px;
   margin: 20px 10px 10px 10px;
   padding: 10px;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
